tests/negative/traits/mismatch_method_param_arity.orng
// mismatch_method_param_arity.orng:10:7: error: trait `My_Trait` specifies 1 parameter for method `f`, got 2
//     fn f(self, x: Int) -> () {}
//      ^
// 
trait My_Trait {
    fn f(self) -> ()
}

impl My_Trait for Int {
    fn f(self, x: Int) -> () {}
}

fn main() -> Int {
    4
}